--- a/capstone_project.Rmd
+++ b/capstone_project.Rmd
@@ -4,13 +4,18 @@ author: "Aleksey Glotov"
 date: "28 July 2016 г."
 output: html_document
 ---
+## Load packages
+```{r}
+library(ggplot2)
+```
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## Data acquisition
 
 ```{r}
-summary(cars)
+download.file("https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip", destfile = "swiftkey.zip")
+unzip(zipfile = "swiftkey.zip")
+
 ```
 
 You can also embed plots, for example:
