--- a/capstone_project.Rmd
+++ b/capstone_project.Rmd
@@ -7,6 +7,7 @@ output: html_document
 ## Load packages
 ```{r}
 library(ggplot2)
+library(tm)
 ```
 
 
@@ -21,7 +22,8 @@ unzip(zipfile = "swiftkey.zip")
 You can also embed plots, for example:
 
 ```{r, echo=FALSE}
-plot(cars)
+#create text collection for 3 'en_US' files
+textcol = Corpus(x = DirSource("en_US"), readerControl = list(language = "en_US"))
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
